views: support vertical-drag-to-end on textfields

On Mac, dragging above the top of a textfield drags to the beginning of the
textfield's contents, and dragging below the bottom drags to the end of the
textfield's contents. This change implements that behavior, controlled by
PlatformStyle::kTextfieldDragVerticallyDragsToEnd, which is true only on Mac.

BUG=600166

Review URL: https://codereview.chromium.org/1865063004

Cr-Commit-Position: refs/heads/master@{#387988}

Former-commit-id: ef378f2dcd244781ba68cc2a4f709e6f3d100569